[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ballsdex-reward"
version = "1.0.0"
description = "Daily, weekly and monthly collectible reward commands for BallsDex v3"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "faye"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.urls]
Repository = "https://github.com/faye69/BallsDex-Reward-Pack"
Documentation = "https://github.com/faye69/BallsDex-Reward-Pack#readme"
Issues = "https://github.com/faye69/BallsDex-Reward-Pack/issues"

[tool.hatch.build.targets.wheel]
packages = ["reward"]
