[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ballsdex-reward"
version = "1.0.0"
description = "Daily, weekly and monthly collectible reward commands for BallsDex v3"
license = "MIT"
authors = [{name = "faye"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.urls]
Repository = "https://github.com/faye69/BallsDex-Reward-Pack"
Documentation = "https://github.com/faye69/BallsDex-Reward-Pack#readme"
Issues = "https://github.com/faye69/BallsDex-Reward-Pack/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["reward*"]
